<resources>
    <string name="app_name">KidsZee</string>
    <string name="slide_1_title" translatable="false">Hello Folk!</string>
    <string name="slide_1_desc" translatable="false">This app is for Children!
        </string>

    <string name="slide_2_title" translatable="false">Fun with Learning </string>
    <string name="slide_2_desc" translatable="false">Now your child can have fun while learning</string>

    <string name="slide_3_title" translatable="false">Drawing !</string>
    <string name="slide_3_desc" translatable="false">Draw whatever you feel like</string>

    <string name="slide_4_title" translatable="false">Stay Connected</string>
    <string name="slide_4_desc" translatable="false">For Better Experience!</string>

    <string name="next" translatable="false">NEXT</string>
    <string name="skip" translatable="false">SKIP</string>
    <string name="start" translatable="false">GOT IT</string>

    <string name="action_settings">Settings</string>
    <string name="start_new">New</string>
    <string name="erase">Erase</string>
    <string name="clear">Save</string>
    <string name="undo">Undo</string>
    <string name="redo">Redo</string>
    <string name="load">Load</string>
    <string name="paint">Paint</string>
    <string name="dialog_message">Dialog Message</string>
    <string name="timeout_msg">Do you like your work?</string>
    <string name="save_msg">Save Drawing?</string>
    <string name="load_msg">Load Previous Painting?</string>
    <string name="new_msg">Start New Drawing?</string>
    <string name="clear_msg">Clear the Screen?</string>

    <string name="english_letters">ENGLISH LETTERS</string>
    <string name="english_numbers">ENGLISH NUMBERS</string>
    <string name="drawing">DRAWING</string>
    <string name="music_videos">MUSIC VIDEOS</string>
    <string name="pronounce">Pronounce</string>
    <string name="english">English</string>
</resources>