<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:background="@drawable/theme"
    android:orientation="vertical"
    tools:context=".DrawingActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/new_btn"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:contentDescription="@string/start_new"
            android:background="#00FFFFFF"
            android:layout_marginEnd="@dimen/endMargin"
            android:layout_marginRight="@dimen/endMargin"
            android:src="@drawable/new_icon" />

        <ImageButton
            android:id="@+id/erase_btn"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:layout_marginEnd="@dimen/endMargin"
            android:layout_marginRight="@dimen/endMargin"
            android:contentDescription="@string/erase"
            android:background="#00FFFFFF"
            android:src="@drawable/eraser" />

        <ImageButton
            android:id="@+id/undo_btn"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:contentDescription="@string/undo"
            android:layout_marginEnd="@dimen/endMargin"
            android:layout_marginRight="@dimen/endMargin"
            android:background="#00FFFFFF"
            android:src="@drawable/undo" />

        <ImageButton
            android:id="@+id/redo_btn"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:contentDescription="@string/redo"
            android:layout_marginEnd="@dimen/endMargin"
            android:layout_marginRight="@dimen/endMargin"
            android:background="#00FFFFFF"
            android:src="@drawable/redo" />

        <ImageButton
            android:id="@+id/load1"
            android:layout_width="36dp"
            android:layout_height="36dp"
            app:srcCompat="@drawable/load"
            android:layout_marginEnd="@dimen/endMargin"
            android:layout_marginRight="@dimen/endMargin"
            android:background="#00FFFFFF"
            android:contentDescription="@string/load"
             />

        <ImageButton
            android:id="@+id/load2"
            android:layout_width="36dp"
            android:layout_height="36dp"
            app:srcCompat="@drawable/load"
            android:layout_marginEnd="@dimen/endMargin"
            android:layout_marginRight="@dimen/endMargin"
            android:background="#00FFFFFF"
            android:contentDescription="@string/load"
             />

        <ImageButton
            android:id="@+id/load3"
            android:layout_width="36dp"
            android:layout_height="36dp"
            app:srcCompat="@drawable/load"
            android:layout_marginEnd="@dimen/endMargin"
            android:layout_marginRight="@dimen/endMargin"
            android:background="#00FFFFFF"
            android:contentDescription="@string/load" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/paint_colors"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center">

        <ImageButton
            android:id="@+id/rc"
            android:layout_width="@dimen/icon_size"
            android:layout_height="@dimen/icon_size"
            android:layout_margin="2dp"
            android:background="@drawable/red"
            android:contentDescription="@string/paint"
            android:onClick="paintClicked"
            android:src="@drawable/red"
            android:tag="#FFFF0000" />

        <ImageButton
            android:layout_width="@dimen/icon_size"
            android:layout_height="@dimen/icon_size"
            android:layout_margin="2dp"
            android:background="@drawable/yellow"
            android:contentDescription="@string/paint"
            android:onClick="paintClicked"
            android:src="@drawable/yellow"
            android:tag="#FFFFCC00"
            android:id="@+id/yc" />

        <ImageButton
            android:layout_width="@dimen/icon_size"
            android:layout_height="@dimen/icon_size"
            android:layout_margin="2dp"
            android:background="@drawable/green"
            android:contentDescription="@string/paint"
            android:onClick="paintClicked"
            android:src="@drawable/green"
            android:tag="#32cd32"
            android:id="@+id/gc" />

        <ImageButton
            android:layout_width="@dimen/icon_size"
            android:layout_height="@dimen/icon_size"
            android:layout_margin="2dp"
            android:background="@drawable/blue"
            android:contentDescription="@string/paint"
            android:onClick="paintClicked"
            android:src="@drawable/blue"
            android:tag="#00bfff"
            android:id="@+id/bc" />

        <ImageButton
            android:layout_width="@dimen/icon_size"
            android:layout_height="@dimen/icon_size"
            android:layout_margin="2dp"
            android:background="@drawable/pink"
            android:contentDescription="@string/paint"
            android:onClick="paintClicked"
            android:src="@drawable/pink"
            android:tag="#FFFF00FF"
            android:id="@+id/pc" />
    </LinearLayout>

    <com.mgm.kidszee.PaintView
        android:id="@+id/drawing"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="3dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="3dp"
        android:layout_weight="1"
        android:background="#FFFFFFFF" />

</LinearLayout>
